--- a/v/index.html
+++ b/v/index.html
@@ -12,7 +12,7 @@
  <link rel="stylesheet" href="../css/styles.css">
 
  <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
  <![endif]-->
 
  <!-- Twitter Card data -->
@@ -27,7 +27,7 @@
  <!-- Open Graph data -->
  <meta property="og:title" content="25 Headlines" />
  <meta property="og:type" content="article" />
- <meta property="og:url" content="http://nealrs.github.io/25Headlines/" />
+ <meta property="og:url" content="https://nealrs.github.io/25Headlines/" />
  <meta property="og:image" content="https://raw.githubusercontent.com/nealrs/25Headlines/gh-pages/img/25Headlines.png" />
  <meta property="og:description" content="If you want more clicks, you have to excercise your brain." />
  <meta property="og:site_name" content="25 Headlines" />
@@ -39,7 +39,6 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'UA-110784667-1');
 </script>
 
@@ -49,7 +48,7 @@
 
 <body>
   <h2>Help me pick a <span id="contentType">headline</span>.</h2>
-  <p id="credit">Inspired by <a href="http://www.slideshare.net/Upworthy/upworthy-10-ways-to-win-the-internets" target="_blank" title="Adam is one of the Upworthy guys, duh.">Upworthy</a> &amp; <a href="https://blog.kissmetrics.com/ultimate-home-page-headline/" target="_blank" title="KISSmetrics runs an excellent blog">KissMetrics</a>.</p>
+  <p id="credit">Inspired by <a href="https://www.slideshare.net/Upworthy/upworthy-10-ways-to-win-the-internets" target="_blank" title="Adam is one of the Upworthy guys, duh.">Upworthy</a> &amp; <a href="https://blog.kissmetrics.com/ultimate-home-page-headline/" target="_blank" title="KISSmetrics runs an excellent blog">KissMetrics</a>.</p>
 
  <div id="actionButtons" class="btnContainer">
    <h4>
@@ -67,35 +66,35 @@
 </div>
 
  <form id="form">
-  <div class="line"><span class="num">1.</span><input type="text" class="hl" id="h1" name="h1" disabled/><span class="count">0</span></p>
-  <div class="line"><span class="num">2.</span><input type="text" class="hl" id="h2" name="h2" disabled/><span class="count">0</span></p>
-  <div class="line"><span class="num">3.</span><input type="text" class="hl" id="h3" name="h3" disabled/><span class="count">0</span></p>
-  <div class="line"><span class="num">4.</span><input type="text" class="hl" id="h4" name="h4" disabled/><span class="count">0</span></p>
-  <div class="line"><span class="num">5.</span><input type="text" class="hl" id="h5" name="h5" disabled/><span class="count">0</span></p>
+  <div class="line"><p><span class="num">1.</span><input type="text" class="hl" id="h1" name="h1" disabled/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">2.</span><input type="text" class="hl" id="h2" name="h2" disabled/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">3.</span><input type="text" class="hl" id="h3" name="h3" disabled/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">4.</span><input type="text" class="hl" id="h4" name="h4" disabled/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">5.</span><input type="text" class="hl" id="h5" name="h5" disabled/><span class="count">0</span></p></div>
 
-  <div class="line"><span class="num">6.</span><input type="text" class="hl" id="h6" name="h6" disabled/><span class="count">0</span></p>
-  <div class="line"><span class="num">7.</span><input type="text" class="hl" id="h7" name="h7" disabled/><span class="count">0</span></p>
-  <div class="line"><span class="num">8.</span><input type="text" class="hl" id="h8" name="h8" disabled/><span class="count">0</span></p>
-  <div class="line"><span class="num">9.</span><input type="text" class="hl" id="h9" name="h9" disabled/><span class="count">0</span></p>
-  <div class="line"><span class="num">10.</span><input type="text" class="hl" id="h10" name="h10" disabled/><span class="count">0</span></p>
+  <div class="line"><p><span class="num">6.</span><input type="text" class="hl" id="h6" name="h6" disabled/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">7.</span><input type="text" class="hl" id="h7" name="h7" disabled/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">8.</span><input type="text" class="hl" id="h8" name="h8" disabled/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">9.</span><input type="text" class="hl" id="h9" name="h9" disabled/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">10.</span><input type="text" class="hl" id="h10" name="h10" disabled/><span class="count">0</span></p></div>
 
-  <div class="line"><span class="num">11.</span><input type="text" class="hl" id="h11" name="h11" disabled/><span class="count">0</span></p>
-  <div class="line"><span class="num">12.</span><input type="text" class="hl" id="h12" name="h12" disabled/><span class="count">0</span></p>
-  <div class="line"><span class="num">13.</span><input type="text" class="hl" id="h13" name="h13" disabled/><span class="count">0</span></p>
-  <div class="line"><span class="num">14.</span><input type="text" class="hl" id="h14" name="h14" disabled/><span class="count">0</span></p>
-  <div class="line"><span class="num">15.</span><input type="text" class="hl" id="h15" name="h15" disabled/><span class="count">0</span></p>
+  <div class="line"><p><span class="num">11.</span><input type="text" class="hl" id="h11" name="h11" disabled/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">12.</span><input type="text" class="hl" id="h12" name="h12" disabled/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">13.</span><input type="text" class="hl" id="h13" name="h13" disabled/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">14.</span><input type="text" class="hl" id="h14" name="h14" disabled/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">15.</span><input type="text" class="hl" id="h15" name="h15" disabled/><span class="count">0</span></p></div>
 
-  <div class="line"><span class="num">16.</span><input type="text" class="hl" id="h16" name="h16" disabled/><span class="count">0</span></p>
-  <div class="line"><span class="num">17.</span><input type="text" class="hl" id="h17" name="h17" disabled/><span class="count">0</span></p>
-  <div class="line"><span class="num">18.</span><input type="text" class="hl" id="h18" name="h18" disabled/><span class="count">0</span></p>
-  <div class="line"><span class="num">19.</span><input type="text" class="hl" id="h19" name="h19" disabled/><span class="count">0</span></p>
-  <div class="line"><span class="num">20.</span><input type="text" class="hl" id="h20" name="h20" disabled/><span class="count">0</span></p>
+  <div class="line"><p><span class="num">16.</span><input type="text" class="hl" id="h16" name="h16" disabled/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">17.</span><input type="text" class="hl" id="h17" name="h17" disabled/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">18.</span><input type="text" class="hl" id="h18" name="h18" disabled/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">19.</span><input type="text" class="hl" id="h19" name="h19" disabled/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">20.</span><input type="text" class="hl" id="h20" name="h20" disabled/><span class="count">0</span></p></div>
 
-  <div class="line"><span class="num">21.</span><input type="text" class="hl" id="h21" name="h21" disabled/><span class="count">0</span></p>
-  <div class="line"><span class="num">22.</span><input type="text" class="hl" id="h22" name="h22" disabled/><span class="count">0</span></p>
-  <div class="line"><span class="num">23.</span><input type="text" class="hl" id="h23" name="h23" disabled/><span class="count">0</span></p>
-  <div class="line"><span class="num">24.</span><input type="text" class="hl" id="h24" name="h24" disabled/><span class="count">0</span></p>
-  <div class="line"><span class="num">25.</span><input type="text" class="hl" id="h25" name="h25" disabled/><span class="count">0</span></p>
+  <div class="line"><p><span class="num">21.</span><input type="text" class="hl" id="h21" name="h21" disabled/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">22.</span><input type="text" class="hl" id="h22" name="h22" disabled/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">23.</span><input type="text" class="hl" id="h23" name="h23" disabled/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">24.</span><input type="text" class="hl" id="h24" name="h24" disabled/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">25.</span><input type="text" class="hl" id="h25" name="h25" disabled/><span class="count">0</span></p></div>
 
  <!-- this button should go to a PH style voting interface so you can let colleagues help you pick a headline.-->
  <!--<input type="submit" class="feedback" value="Help me pick a headline">-->
@@ -106,14 +105,16 @@
 </div>
  </form>
 
- <p>&copy; 2014 &middot; <a href="http://nealshyam.com" target="_blank" title="Neal Shyam is an awesome dude!">Neal Shyam</a> &middot; <a href="mailto:nealrs@gmail.com" title="I'd love to get your feedback!">feedback plz</a></p>
+ <p>&copy; 2020 &middot; <a href="https://nealshyam.com" target="_blank" title="Neal Shyam is an awesome dude!">Neal Shyam</a> &middot; <a href="mailto:nealrs@gmail.com" title="I'd love to get your feedback!">feedback plz</a></p>
 
 
  <!-- JaVAVAVAVAVascript -->
- <script type='text/javascript' src='https://cdn.firebase.com/js/client/1.0.17/firebase.js'></script>
- <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+ <script
+  src="//code.jquery.com/jquery-1.12.4.min.js"
+  integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+  crossorigin="anonymous"></script>
  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mousetrap/1.4.6/mousetrap.min.js"></script>
- <script src="../js/view.js"></script>
+ <script src="../js/script.js"></script>
 </body>
 </html>
