--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <link rel="stylesheet" href="css/styles.css">
 
  <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
  <![endif]-->
 
  <!-- Twitter Card data -->
@@ -27,7 +27,7 @@
  <!-- Open Graph data -->
  <meta property="og:title" content="25 Headlines" />
  <meta property="og:type" content="article" />
- <meta property="og:url" content="http://nealrs.github.io/25Headlines/" />
+ <meta property="og:url" content="https://nealrs.github.io/25Headlines/" />
  <meta property="og:image" content="https://raw.githubusercontent.com/nealrs/25Headlines/gh-pages/img/25Headlines.png" />
  <meta property="og:description" content="If you want more clicks, you have to excercise your brain." />
  <meta property="og:site_name" content="25 Headlines" />
@@ -39,7 +39,6 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'UA-110784667-1');
 </script>
 
@@ -50,8 +49,7 @@
 <body>
  <h1>25 <span id="contentType">Headlines</span></h1>
  <h3 id="subHead">Copywriters aren't born, they practice.</h3>
-
- <p id="credit">Inspired by <a href="http://www.slideshare.net/Upworthy/upworthy-10-ways-to-win-the-internets" target="_blank" title="Adam is one of the Upworthy guys, duh.">Upworthy</a> &amp; <a href="https://blog.kissmetrics.com/ultimate-home-page-headline/" target="_blank" title="KISSmetrics runs an excellent blog">KissMetrics</a>.</p>
+ <p id="credit">Inspired by <a href="https://www.slideshare.net/Upworthy/upworthy-10-ways-to-win-the-internets" target="_blank" title="Adam is one of the Upworthy guys, duh.">Upworthy</a> &amp; <a href="https://blog.kissmetrics.com/ultimate-home-page-headline/" target="_blank" title="KISSmetrics runs an excellent blog">KissMetrics</a>.</p>
 
  <div id="selectors" class="btnContainer">
   <h4>
@@ -70,35 +68,35 @@
  </div>
 
  <form id="form">
-  <div class="line"><span class="num">1.</span><input type="text" class="hl" id="h1" required placeholder="Who Else Wants a Killer Robot?" name="h1" spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">2.</span><input type="text" class="hl" id="h2" required placeholder="The Secret of Giant Pandas" name="h2" spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">3.</span><input type="text" class="hl" id="h3" required placeholder="Here's the Miracle That's Helping Bros Live Longer" name="h3" spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">4.</span><input type="text" class="hl" id="h4"required placeholder="Little Known Ways to Nurse Your Cat" name="h4" spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">5.</span><input type="text" class="hl" id="h5"required placeholder="Now You Can Have a Great Body Without Paying Too Much" name="h5" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><p><span class="num">1.</span><input type="text" class="hl" id="h1" required placeholder="Who Else Wants a Killer Robot?" name="h1" spellcheck="true"/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">2.</span><input type="text" class="hl" id="h2" required placeholder="The Secret of Giant Pandas" name="h2" spellcheck="true"/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">3.</span><input type="text" class="hl" id="h3" required placeholder="Here's the Miracle That's Helping Bros Live Longer" name="h3" spellcheck="true"/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">4.</span><input type="text" class="hl" id="h4"required placeholder="Little Known Ways to Nurse Your Cat" name="h4" spellcheck="true"/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">5.</span><input type="text" class="hl" id="h5"required placeholder="Now You Can Have a Great Body Without Paying Too Much" name="h5" spellcheck="true"/><span class="count">0</span></p></div>
 
-  <div class="line"><span class="num">6.</span><input type="text" class="hl" id="h6" required placeholder="Annihilate Watermelons Like Gallagher" name="h6" spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">7.</span><input type="text" class="hl" id="h7" required placeholder="Own the Yacht Your Neighbors Dream About" name="h7" spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">8.</span><input type="text" class="hl" id="h8" required placeholder="What Everybody Ought to Know About Spiders" name="h8" spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">9.</span><input type="text" class="hl" id="h9" required placeholder="100 Ways to Style Butter" name="h9" spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">10.</span><input type="text" class="hl" id="h10" required placeholder="He Took the Road Less Traveled &mdash; You'll Never Guess What Happened Next" name="h10" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><p><span class="num">6.</span><input type="text" class="hl" id="h6" required placeholder="Annihilate Watermelons Like Gallagher" name="h6" spellcheck="true"/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">7.</span><input type="text" class="hl" id="h7" required placeholder="Own the Yacht Your Neighbors Dream About" name="h7" spellcheck="true"/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">8.</span><input type="text" class="hl" id="h8" required placeholder="What Everybody Ought to Know About Spiders" name="h8" spellcheck="true"/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">9.</span><input type="text" class="hl" id="h9" required placeholder="100 Ways to Style Butter" name="h9" spellcheck="true"/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">10.</span><input type="text" class="hl" id="h10" required placeholder="He Took the Road Less Traveled &mdash; You'll Never Guess What Happened Next" name="h10" spellcheck="true"/><span class="count">0</span></p></div>
 
-  <div class="line"><span class="num">11.</span><input type="text" class="hl" id="h11" required placeholder="How to Get Rid of Stubborn Bonos" name="h11" spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">12.</span><input type="text" class="hl" id="h12" required placeholder="Fewer Zombies in 7 Days or Your Money Back!" name="h12" spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">13.</span><input type="text" class="hl" id="h13" required placeholder="Now You Can Win Hackathons Even If You Don't Know Node.js" name="h13" spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">14.</span><input type="text" class="hl" id="h14" required placeholder="How to Shop at Ikea Without Murdering Your Spouse" name="h14" spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">15.</span><input type="text" class="hl" id="h15" required placeholder="684,935 Bedbugs Agree, Your Apartment Is Infested" name="h15" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><p><span class="num">11.</span><input type="text" class="hl" id="h11" required placeholder="How to Get Rid of Stubborn Bonos" name="h11" spellcheck="true"/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">12.</span><input type="text" class="hl" id="h12" required placeholder="Fewer Zombies in 7 Days or Your Money Back!" name="h12" spellcheck="true"/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">13.</span><input type="text" class="hl" id="h13" required placeholder="Now You Can Win Hackathons Even If You Don't Know Node.js" name="h13" spellcheck="true"/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">14.</span><input type="text" class="hl" id="h14" required placeholder="How to Shop at Ikea Without Murdering Your Spouse" name="h14" spellcheck="true"/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">15.</span><input type="text" class="hl" id="h15" required placeholder="684,935 Bedbugs Agree, Your Apartment Is Infested" name="h15" spellcheck="true"/><span class="count">0</span></p></div>
 
-  <div class="line"><span class="num">16.</span><input type="text" class="hl" id="h16" required placeholder="25 Reasons Why Manhattan Is Man-Has-Been" name="h16" spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">17.</span><input type="text" class="hl" id="h17" required placeholder="Why SEO Gives Marketers Aneurysms" name="h17" spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">18.</span><input type="text" class="hl" id="h18" required placeholder="The Ultimate Twerking Compilation Video" name="h18" spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">19.</span><input type="text" class="hl" id="h19" required placeholder="The Brilliant, Super Fast Way to Shotgun a Beer" name="h19" spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">20.</span><input type="text" class="hl" id="h20" required placeholder="Rage Spend Like a Jilted Kardashian" name="h20" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><p><span class="num">16.</span><input type="text" class="hl" id="h16" required placeholder="25 Reasons Why Manhattan Is Man-Has-Been" name="h16" spellcheck="true"/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">17.</span><input type="text" class="hl" id="h17" required placeholder="Why SEO Gives Marketers Aneurysms" name="h17" spellcheck="true"/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">18.</span><input type="text" class="hl" id="h18" required placeholder="The Ultimate Twerking Compilation Video" name="h18" spellcheck="true"/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">19.</span><input type="text" class="hl" id="h19" required placeholder="The Brilliant, Super Fast Way to Shotgun a Beer" name="h19" spellcheck="true"/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">20.</span><input type="text" class="hl" id="h20" required placeholder="Rage Spend Like a Jilted Kardashian" name="h20" spellcheck="true"/><span class="count">0</span></p></div>
 
-  <div class="line"><span class="num">21.</span><input type="text" class="hl" id="h21" required placeholder="The Future of Sharks Is Here" name="h21" spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">22.</span><input type="text" class="hl" id="h22" required placeholder="Nebraska Just Got Exciting" name="h22" spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">23.</span><input type="text" class="hl" id="h23" required placeholder="5 Lies Your Friends Tell You Everyday" name="h23" spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">24.</span><input type="text" class="hl" id="h24" required placeholder="The Programming Language That RMS Actually Likes" name="h24" spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">25.</span><input type="text" class="hl" id="h25" required placeholder="Avoid Embarrassment: Learn How to Turn down for What" name="h25" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><p><span class="num">21.</span><input type="text" class="hl" id="h21" required placeholder="The Future of Sharks Is Here" name="h21" spellcheck="true"/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">22.</span><input type="text" class="hl" id="h22" required placeholder="Nebraska Just Got Exciting" name="h22" spellcheck="true"/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">23.</span><input type="text" class="hl" id="h23" required placeholder="5 Lies Your Friends Tell You Everyday" name="h23" spellcheck="true"/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">24.</span><input type="text" class="hl" id="h24" required placeholder="The Programming Language That RMS Actually Likes" name="h24" spellcheck="true"/><span class="count">0</span></p></div>
+  <div class="line"><p><span class="num">25.</span><input type="text" class="hl" id="h25" required placeholder="Avoid Embarrassment: Learn How to Turn down for What" name="h25" spellcheck="true"/><span class="count">0</span></p></div>
 
  <!-- this button should go to a PH style voting interface so you can let colleagues help you pick a headline.-->
  <!--<input type="submit" class="feedback" value="Help me pick a headline">-->
@@ -113,13 +111,17 @@
    </div>
  </form>
 
- <p>&copy; 2014 &middot; <a href="http://nealshyam.com" target="_blank" title="Neal Shyam is an awesome dude!">Neal Shyam</a> &middot; <a href="mailto:nealrs@gmail.com" title="I'd love to get your feedback!">feedback plz</a></p>
+ <p>&copy; 2020 &middot; <a href="https://nealshyam.com" target="_blank" title="Neal Shyam is an awesome dude!">Neal Shyam</a> &middot; <a href="mailto:nealrs@gmail.com" title="I'd love to get your feedback!">feedback plz</a></p>
 
 
  <!-- JaVAVAVAVAVascript -->
- <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+ <script
+  src="//code.jquery.com/jquery-1.12.4.min.js"
+  integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+  crossorigin="anonymous"></script>
  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
- <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mousetrap/1.4.6/mousetrap.min.js"></script><script type='text/javascript' src='https://cdn.firebase.com/js/client/1.0.17/firebase.js'></script>
+ <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mousetrap/1.4.6/mousetrap.min.js"></script>
+ <script src="//cdnjs.cloudflare.com/ajax/libs/uuid/8.1.0/uuidv4.min.js"></script>
  <script src="js/script.js"></script>
 </body>
 </html>
