--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
   gtag('js', new Date());
   gtag('config', 'UA-110784667-1');
 </script>
-
-
-
 </head>
 
 <body>
  <h1>25 <span id="contentType">Headlines</span></h1>
  <h3 id="subHead">Copywriters aren't born, they practice.</h3>
+ 
  <p id="credit">Inspired by <a href="https://www.slideshare.net/Upworthy/upworthy-10-ways-to-win-the-internets" target="_blank" title="Adam is one of the Upworthy guys, duh.">Upworthy</a> &amp; <a href="https://blog.kissmetrics.com/ultimate-home-page-headline/" target="_blank" title="KISSmetrics runs an excellent blog">KissMetrics</a>.</p>
+ 
+ <p class="applink">Do you like Jeopardy? Check out Think Fast Trivia on <a href="https://channelstore.roku.com/details/591781/think-fast-trivia" target="_blank" title="Install the free Think Fast Trivia Screensaver">Roku</a> and <a href="https://www.instagram.com/thinkfasttrivia/" target="_blank" title="Follow @ThinkFastTrivia on IG for awesome daily updates">Instagram</a>!</p>
 
  <div id="selectors" class="btnContainer">
   <h4>
